# first_crud

./: .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml
app/: main.py
app/api/: __init__.py  users.py
app/api/v1/routers/: users.py
app/core/: config.py  database.py  exceptions.py
app/migration/: env.py
app/migration/versions/: 61fabd358c26_initial_revision.py  7620adafe4ba_initial_revision.py
app/models/: user.py  user_model.py
app/repositories/: base_repository.py  user_repository.py
app/schemas/: user_schema.py
app/services/: exceptions.py  user_service.py
app/utils/: dependencies.py  middlewares.py  security.py
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  users.py
backend/app/api/users/: __init__.py  user_preferences.py  user_profile.py
backend/app/core/: config.py
backend/app/migration/: env.py
backend/app/migration/versions/: 3bd06dab86d7_initial_revision.py  a4a4d9ec3c3c_initial_revision.py
backend/app/models/: user_model.py
backend/app/repositories/: base_repository.py  preferences_repository.py  profile_repository.py  uow.py  user_repository.py
backend/app/schemas/: user_schema.py
backend/app/services/: factories.py  preferences_service.py  profile_service.py  user_service.py
backend/app/utils/: dependencies.py  security.py
backend/tests/: conftest.py  test_api.py  test_user_repo.py
backend/tests/e2e/: test_api.py
backend/tests/unit/schemas/users/profiles/: conftest.py  test_user_schemas.py
bot/: requets.py  test_requets.py
src/: config.py  database.py  main.py
src/mirgration/: env.py
src/mirgration/versions/: 1d78432469ac_initial_revision.py
src/models/: users.py
src/repositories/: users.py
src/routers/: users.py
src/schemas/: users.py
src/services/: users.py
src/utils/: dependencies.py  repository.py  uow.py
src/utils/repository/: exceptions.py  repository.py
tests/: conftest.py  test_api.py  test_unit_repo.py  test_user_repo.py
